# StorageAnalyzer

./: .gitignore  README.md  build-exe.ps1  build-installer.ps1  pyproject.toml  setup.py  storageanalyzer.spec
.github/workflows/: release.yml
docs/: USER_MANUAL.md
installer/: storageanalyzer.iss
native/: walker.cpp
packaging/: make_icon.py
scripts/: sa_entry.py
src/storageanalyzer/: __init__.py  __main__.py  _format.py  aggregate.py  cli.py  fallback.py  gui.py  report.py  scan.py  template.html
tests/: conftest.py  test_aggregate.py  test_cli.py  test_fallback.py  test_gui.py  test_report.py
