[build-system]
requires = ["setuptools>=64", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "storageanalyzer"
version = "1.1.0"
description = "Fast parallel Windows storage analyzer with an interactive HTML report"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Cameron Crow" }]
keywords = ["storage", "disk-usage", "treemap", "windows", "filesystem"]
classifiers = [
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: System :: Filesystems",
]
# The CLI scanner has zero runtime dependencies -- by design. The desktop GUI
# adds one (pywebview, the native webview host); install it via the `gui` extra.
dependencies = []

[project.optional-dependencies]
# Desktop GUI: pywebview hosts the in-window HTML report (Edge WebView2).
gui = ["pywebview>=5.0"]
# Tooling for building the standalone .exe (see build-exe.ps1). pybind11 is
# listed here too so `pip install -e . --no-build-isolation` can find it.
# pywebview is bundled into the exe, so the build needs it present.
build = ["pyinstaller>=6.0", "pybind11>=2.10", "pywebview>=5.0"]

[project.scripts]
storageanalyzer = "storageanalyzer.cli:main"

# GUI launcher -- a gui-script so Windows starts it without a console window.
[project.gui-scripts]
storageanalyzer-gui = "storageanalyzer.gui:main"

[project.urls]
Homepage = "https://github.com/CameronCrow/StorageAnalyzer"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
storageanalyzer = ["template.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
